@startuml Bank
class BankKonto{
    +eier : Eier
    +kontonummer : str
    +saldo : float = 0
    +sett_inn(penger: float)
    +ta_ut(penger: float)
}
class BSUKonto{
    #maks_årlig_saldo: int
    +sett_inn(penger: float)
}
class SpareKonto{
    #maks_antall_årlig_uttak : int
    +ta_ut(penger: float)
}
class Eier{
    #fornavn : str
    #etternavn : str
    #tlfnummer : str
    +full_navn()
    +telefonnummer()
}   

SpareKonto -up-|> BankKonto
BSUKonto -up-|> BankKonto
Eier "*" .left.* "1" BankKonto


@enduml